src/main/java/com/example/DiplomaSite/error/DiplomaDefenseNotFoundException.java
package com.example.DiplomaSite.error;

public class DiplomaDefenseNotFoundException extends RuntimeException{
    public DiplomaDefenseNotFoundException(String message) {
        super(message);
    }
}
